--- a/eks-template.yaml
+++ b/eks-template.yaml
@@ -125,14 +125,6 @@ spec:
           description: Paste your JSON configuration here
           ui:options:
             rows: 10
-        # Optional: Add file upload option
-        jsonFile:
-          title: Or upload JSON file
-          type: string
-          ui:field: FilePicker
-          description: Upload a JSON configuration file
-          ui:options:
-            accept: '.json'
 
   steps:
     - id: fetch-base
@@ -144,7 +136,7 @@ spec:
           project_name: ${{ parameters.name }}
           repoUrl: ${{ parameters.repoUrl }}
           destination: ${{ parameters.repoUrl | parseRepoUrl }}
-          json_config: ${{ parameters.jsonInput || parameters.jsonFile }}  # Fixed reference
+          json_config: ${{ parameters.jsonInput }}  # Fixed reference
       copyWithoutRender:
         - '.github/*'
 
